Đợt 9: long-poll cho chat + nhắc việc trong game (#82)
Khảo sát trước khi làm (spec §14 muốn WSS /v1/realtime)
- Maven cache không có thư viện WebSocket nào, và server chạy com.sun.net.httpserver
  thuần nên thêm WS đồng nghĩa với đổi cả tầng HTTP hoặc mở thêm cổng và sửa cấu hình
  nginx. Chọn long-poll: hiệu quả tương đương với chat, không thêm phụ thuộc, đi qua
  HTTPS sẵn có. Ghi lý do vào ROADMAP để sau này cần realtime thật thì biết đường quay lại.

Long-poll
- Thêm ?wait=<giây> (trần 25) cho GET /v1/chat/world và /v1/chat/private: server giữ
  request tới khi có tin mới rồi mới trả lời. Bỏ wait đi thì hành vi như cũ.
- HTTP server đổi sang virtual thread của Java 21 nên vài nghìn người treo chờ cũng
  không chiếm thread thật.
- Client nghỉ 0,2 giây giữa hai vòng thay vì 3 giây; tin hiện gần như tức thì và số
  request giảm gần 10 lần.
- Bỏ lệnh nạp lại sau khi gửi tin: vòng long-poll đang treo sẽ nhận tin đó ngay, gọi
  thêm sẽ chạy song song và thêm trùng dòng.

Nhắc việc
- Notifications.Pending() gộp cây chín, thú đói, nhiệm vụ xong thành một dòng ở sảnh,
  tính từ dữ liệu đã tải sẵn nên không thêm endpoint nào.
- Thông báo hệ thống viết sẵn nhưng nằm sau define MYZOO_MOBILE_NOTIFICATIONS vì cần
  cài gói Unity riêng — không cài thì phần đó bị bỏ qua, game vẫn biên dịch bình thường.

189 test xanh (thêm 6).


Claude-Session: https://claude.ai/code/session_01EPw9zi9TDBwdj6rRpq1Lug

Co-authored-by: Claude <noreply@anthropic.com>